compiler/testData/loadJava/kotlinSignature/error/NoFieldTypeRef.kt
package test

import java.util.*

public open class NoFieldTypeRef : Object() {
    public var foo : String? = ""
}
